# errify

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
errify/: Cargo.toml
errify-macros/: Cargo.toml
errify-macros/src/: context_provider.rs  errify_macro.rs  input.rs  lib.rs  output.rs  utils.rs
errify-macros/src/context_macro/: output.rs
errify-macros/src/errify_macro/: input.rs  mod.rs  output.rs
errify/src/: lib.rs  macros.rs
errify/tests/: context.rs  errify.rs  errify_with.rs  utils.rs  with_context.rs
errify_derive/: Cargo.toml
errify_derive/src/: context_provider.rs  error_provider.rs  lib.rs  utils.rs
errify_derive/src/context_macro/: input.rs  mod.rs  output.rs
test_suite/: Cargo.toml
