[package]
name = "errify"
description = "Function error context provider via anyhow/erye"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
repository = "https://github.com/LazyMechanic/errify"
documentation = "https://docs.rs/errify"
keywords = ["context", "error", "error-context", "anyhow", "eyre"]
categories = ["rust-patterns"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errify_derive = { version = "0.1.0", path = "../errify_derive", default-features = false }

anyhow = { version = "1.0", optional = true }
eyre = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
default = ["anyhow"]

anyhow = ["dep:anyhow", "errify_derive/anyhow"]
eyre = ["dep:eyre", "errify_derive/eyre"]